# ai-cli-assistant

./: Cargo.toml  theory.md
src/: main.rs
templates/: doctor.txt
