[package]
name = "ai-cli-assistant"
version = "0.1.2"
edition = "2021"
author = "patrik.cihal1234@gmail.com"
license = "MIT"
description = "Integrated intelligence into terminal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.2"
clap = { version = "4.4.4", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "tokio-macros"] }
